--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
 
     <div id="survey-container" class="container mx-auto p-6 bg-white rounded-lg shadow-xl">
-        <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">OJT評価アンケート</h1>
+        <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">OJT自己評価アンケート</h1>
         <form id="survey-form" class="space-y-6">
             <!-- Question Category 1 -->
             <div class="question-card p-6">
