--- a/index.html
+++ b/index.html
@@ -260,8 +260,10 @@
                 <p class="text-lg text-gray-600">あなたの評価:</p>
                 <p id="evaluation" class="text-xl md:text-2xl lg:text-3xl font-extrabold mt-2 leading-relaxed whitespace-pre-wrap"></p>
             </div>
-            <div class="mt-8">
-                <canvas id="radarChart"></canvas>
+            <div class="mt-8 flex justify-center">
+                <div class="w-full max-w-sm">
+                    <canvas id="radarChart"></canvas>
+                </div>
             </div>
             <button onclick="location.reload()" class="mt-8 bg-gray-300 text-gray-800 font-bold py-3 px-6 rounded-lg hover:bg-gray-400 transition-colors duration-200">もう一度試す</button>
         </div>
