--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>OJT自己評価アンケート</title>
+  <title>OJT自己分析チェッカー</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
@@ -51,7 +51,8 @@
 <body class="bg-gray-100 flex items-center justify-center min-h-screen p-4">
 
     <div id="survey-container" class="container mx-auto p-6 bg-white rounded-lg shadow-xl">
-        <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">OJT自己評価アンケート</h1>
+        <h1 class="text-3xl font-bold text-center text-gray-800 mb-8">OJT自己分析チェッカー</h1>
+        ※当チェッカーは、OJT研修#1の「関係の質」と「あなたにとって良いOJT担当とは？」の内容をベースに作成しております。<BR>
         <form id="survey-form" class="space-y-6">
             <!-- Question Category 1 -->
             <div class="question-card p-6">
